# simplicity

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  _config.yml  about.md  configure.ac  install-deps.py  install-deps.sh  manage.py
_posts/: 2014-10-17-initial-commit.markdown  2014-10-20-logging-debug.markdown  2014-10-21-logging-simplified.markdown  2014-10-21-scripting.markdown  2014-10-22-catching-the-signals.markdown  2014-10-24-refactoring!.markdown  2014-11-20-build-tools.markdown  2014-11-27-xcb-research-continues.markdown  2014-11-29-xcb.markdown  2014-11-5-small-break.markdown  2014-12-8-first-window.markdown
_site/: feed.xml  index.html
_site/about/: index.html
_site/jekyll/update/2014/10/17/: initial-commit.html
_site/update/2014/10/20/: logging-debug.html
src/: Makefile.am  application.cpp  application.h  application.hpp  config.h.in  config.hpp.in  log.h  log.hpp  main.cpp  main.h  main.hpp  setup.h  setup.hpp  types.cpp  types.hpp
